tests/compiler/expected/output/CompareOperatorTypeError.shtk.txt
MODULE CompareOperatorTypeError.shtk
ERROR in Line 6 Col 12

    if(a < b) println("lol a < b")
           ^
Type error, did not expect int,
expected float
